[package]
authors = ["marsupialgutz <https://possums.xyz>", "nullobsi <https://nullob.si>"]
name = "colorpick-rs"
description = "Simple color picker made in Rust"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "*"
device_query = "*"
image = "*"
scrap = "*"
repng = "*"