[package]
authors = ["marsupialgutz <https://possums.xyz>", "nullobsi <https://nullob.si>"]
name = "colorpick-rs"
description = "Simple color picker made in Rust"
version = "1.0.2"
edition = "2021"

[dependencies]
rdev = "0.5.1"
device_query = "1.0.0"
image = "0.24.1"
scrap = "0.5.0"
repng = "0.2.2"